chore(daily-report): upgrade to v1.2.2

--- a/.github/workflows/daily_report.yml
+++ b/.github/workflows/daily_report.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Build and run Daily Report Action
         id: daily_report
-        uses: jfheinrich-eu/github-daily-report@63196a129709dfe696458e3bea5b9cf893b3e611 # v1.1.4
+        uses: jfheinrich-eu/github-daily-report@663a24d7f86e955e5872a5f5467531703e66b99d # v1.2.2
         with:
           GITHUB_TOKEN: ${{ steps.setup-secrets-gh-token.outputs.secret1 }}
           REPO_NAME: ${{ github.repository }}
@@ -59,3 +59,21 @@ jobs:
           OPENAI_API_KEY: ${{ steps.setup-secrets.outputs.secret5 }}
           SMTP_SERVER: ${{ steps.setup-secrets.outputs.secret6 }}
           SMTP_PORT: ${{ steps.setup-secrets.outputs.secret7 }}
+
+      - name: Create report file with date
+        id: create_report_file
+        if: ${{ steps.daily_report.outputs.report_status == 'success' }}
+        run: |
+          echo "Creating report file with date..."
+          REPORT_NAME="daily-report-$(date +'%Y-%m-%d').md"
+          report_file_name="${REPORT_NAME}"
+          echo "${{ steps.daily_report.outputs.report }}" >> "$report_file_name"
+          echo "Report file created: $report_file_name"
+          echo "report_file_created=success" >> $GITHUB_OUTPUT
+          echo "report_file_name=$report_file_name" >> $GITHUB_OUTPUT
+      - name: Upload Daily Report
+        if: ${{ steps.daily_report.outputs.report_status == 'success' }} && ${{ steps.create_report_file.outputs.report_file_created == 'success' }}
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+        with:
+          name: daily-report
+          path: ${{ steps.create_report_file.outputs.report_file_name }}
