Changes from code review

--- a/.github/workflows/daily_report.yml
+++ b/.github/workflows/daily_report.yml
@@ -65,9 +65,8 @@ jobs:
         if: steps.daily_report.outputs.report_status == 'success'
         run: |
           echo "Creating report file with date..."
-          REPORT_NAME="daily-report-$(date +'%Y-%m-%d').md"
-          report_file_name="${REPORT_NAME}"
-          echo "${{ steps.daily_report.outputs.report }}" >> "$report_file_name"
+          report_file_name="daily-report-$(date +'%Y-%m-%d').md"
+          echo "${{ steps.daily_report.outputs.report }}" > "$report_file_name"
           echo "Report file created: $report_file_name"
           echo "report_file_created=success" >> $GITHUB_OUTPUT
           echo "report_file_name=$report_file_name" >> $GITHUB_OUTPUT
