--- a/Dockerfile-git-python
+++ b/Dockerfile-git-python
@@ -1,5 +1,5 @@
 # Stage 1: Build base image
-FROM python:3.12-alpine AS base
+FROM python:3.12.11-alpine3.22 AS base
 
 ENV GIT_VERSION=2.50.0
 
@@ -32,7 +32,7 @@ RUN <<EOF
 EOF
 
 # Stage 2: Final base image
-FROM python:3.12-alpine AS final_base
+FROM python:3.12.11-alpine3.22 AS final_base
 COPY --from=base /opt/git /opt/git
 ENV PATH="/opt/git/bin:${PATH}"
 ENV LD_LIBRARY_PATH="/opt/git/lib"
@@ -40,19 +40,41 @@ ENV LD_LIBRARY_PATH="/opt/git/lib"
 CMD ["python3"]
 
 # Stage 3: Application build image
-FROM python:3.12-alpine AS builder
+FROM python:3.12.11-alpine3.22 AS builder
 COPY --from=final_base /opt/git /opt/git
 ENV PATH="/opt/git/bin:${PATH}"
 ENV LD_LIBRARY_PATH="/opt/git/lib"
-ADD . /project
+RUN apk add --no-cache \
+    build-base \
+    musl-dev \
+    libffi-dev \
+    openssl-dev \
+    zlib-dev \
+    sqlite-dev \
+    curl-dev \
+    expat-dev \
+    gettext-dev \
+    linux-headers
+COPY pyproject.toml poetry.lock* /project/
+COPY src/ /project/src/
+COPY src /app
 WORKDIR /project
-RUN mkdir /app && \
-    cp -a src/ /app && \
-    python -m pip install --no-cache-dir --target /app . && \
-    chmod 755 /app/app.py
+RUN chmod 755 /app/app.py && \
+    pip install poetry && \
+    poetry self add poetry-plugin-export && \
+    poetry export --whithout-hashes --format requirements.txt -o /app/requirements.txt && \
+    pip install --no-cache-dir --target /app -r /app/requirements.txt
+WORKDIR /app
+RUN find . -name "*.pyc" -delete && \
+    find . -name "__pycache__" -delete && \
+    find . -name "*.pyo" -delete && \
+    find . -name ".pytest_cache" -delete && \
+    find . -name ".mypy_cache" -delete && \
+    find . -name ".coverage" -delete && \
+    find . -name "coverage.xml" -delete
 
 # Stage 4: Final application image
-FROM python:3.12-alpine AS final
+FROM python:3.12.11-alpine3.22 AS final
 COPY --from=builder /opt/git /opt/git
 COPY --from=builder /app /app
 ENV PATH="/opt/git/bin:${PATH}"
