feat: update devcontainer configuration to include shellcheck and improve path handling

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,23 +22,42 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"ms-python.autopep8",
-				"ms-azuretools.vscode-docker",
-				"docker.docker",
-				"dbaeumer.vscode-eslint",
-				"MS-CEINTL.vscode-language-pack-de",
-				"github.vscode-github-actions",
-				"me-dutour-mathieu.vscode-github-actions",
-				"SanjulaGanepola.github-local-actions",
-				"GitHub.vscode-pull-request-github",
-				"codezombiech.gitignore",
-				"ms-python.vscode-pylance",
-				"ms-python.python",
-				"ms-python.debugpy",
-				"redhat.vscode-yaml",
 				"adam-bender.commit-message-editor",
+				"codezombiech.gitignore",
+				"dbaeumer.vscode-eslint",
+				"docker.docker",
+				"eamodio.gitlens",
+				"editorconfig.editorconfig",
+				"edonet.vscode-command-runner",
+				"elagil.pre-commit-helper",
+				"esbenp.prettier-vscode",
+				"github.copilot-chat",
+				"github.copilot",
+				"github.vscode-github-actions",
+				"github.vscode-pull-request-github",
+				"hbenl.vscode-test-explorer",
+				"kaustubhpaturi.py-scope",
+				"littlefoxteam.vscode-python-test-adapter",
+				"marshalthedev.python-code-condenser",
+				"me-dutour-mathieu.vscode-github-actions",
+				"ms-azuretools.vscode-docker",
+				"ms-ceintl.vscode-language-pack-de",
+				"ms-python.autopep8",
+				"ms-python.black-formatter",
+				"ms-python.debugpy",
+				"ms-python.flake8",
+				"ms-python.python",
+				"ms-python.vscode-pylance",
+				"ms-python.vscode-python-envs",
+				"ms-vscode.test-adapter-converter",
+				"ninoseki.vscode-mogami",
+				"redhat.vscode-yaml",
+				"redjue.git-commit-plugin",
 				"ryanluker.vscode-coverage-gutters",
-				"edonet.vscode-command-runner"
+				"sanjulaganepola.github-local-actions",
+				"tamasfe.even-better-toml",
+				"timonwong.shellcheck",
+				"yzhang.markdown-all-in-one"
 			]
 		}
 	},
