--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ permissions:
 on:
   push:
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
+      - "v[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
   tests:
@@ -46,11 +46,11 @@ jobs:
       - tests
     runs-on: ubuntu-latest
     env:
-      PLATFORMS: "linux/386,linux/amd64"
+      PLATFORMS: "linux/arm64,linux/amd64"
       VERSION: ${{ needs.tests.outputs.VERSION }}
     steps:
       - uses: actions/checkout@v4.2.2
-        
+
       - name: Dockerhub Registry Secrets
         id: secret_whisperer
         uses: ./.github/actions/secret_whisperer_dockerhub_registry
@@ -69,7 +69,7 @@ jobs:
       - uses: docker/setup-qemu-action@v3.6.0
 
       - uses: docker/setup-buildx-action@v3.11.1
-        
+
       - name: Build and push image
         id: docker-build
         uses: docker/build-push-action@v6.18.0
@@ -92,7 +92,11 @@ jobs:
             org.opencontainers.image.created=${{ github.event.head_commit.timestamp }}
             org.opencontainers.image.licenses=MIT
             org.opencontainers.image.authors=J.F. Heinrich <jfheinrich@users.noreply.github.com>
-  
+            org.opencontainers.image.vendor=J.F. Heinrich
+            org.opencontainers.image.documentation=https://github.com/jfheinrich-eu/github-daily-report#readme
+            org.opencontainers.image.ref.name=${{ env.VERSION }}
+            org.opencontainers.image.base.name=python:3.12.11-alpine3.22
+
       - name: Update DockerHub description
         uses: peter-evans/dockerhub-description@v4.0.2
         with:
@@ -155,14 +159,14 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v6.0.1
         with:
           branch: master
-          commit_message: 'docs: update CHANGELOG.md for ${{ github.ref_name }} [skip ci]'
+          commit_message: "docs: update CHANGELOG.md for ${{ github.ref_name }} [skip ci]"
           file_pattern: CHANGELOG.md
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2.3.2
         with:
           tag_name: ${{ github.ref_name }}
-          name: 'Release ${{ github.ref_name }}'
+          name: "Release ${{ github.ref_name }}"
           body: ${{ steps.changelog.outputs.changes }}
           files: dist/*
         env:
