chore(project): update pyproject.toml for improved structure and

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [{ name = "Joerg Heinrich", email = "joerg@jfheinrich.eu" }]
 readme = "README.md"
 requires-python = ">=3.12"
 dynamic = ["version"]
-dependencies = ["pipreqs==0.5.0", "GitPython==3.1.45"]
+dependencies = ["pipreqs==0.5.0"]
 
 [project.optional-dependencies]
 dev = ["pytest", "pytest-cov", "flake8", "black", "isort", "pyupgrade", "pylint", "mypy", "pre-commit"]
