feat: Refactor project configuration and enhance functionality
- Updated pyproject.toml to switch from setuptools to poetry for dependency management.
- Added new dependencies and organized optional dependencies into groups.
- Introduced entry points for the pipreqs-action script.
- Created a requirements.txt file with conditional dependencies for Python 3.12.
- Refactored app.py to encapsulate the main logic in a dedicated function.
- Improved the SaveRequirementsResult TypedDict to include type hints.
- Enhanced the PipReqsAction class to streamline requirement generation and warning handling.
- Added comprehensive tests for the app module, covering various scenarios and edge cases.
- Implemented a test for running the app as a script entry point.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,7 @@
     "command-runner.terminal.autoClear": true,
     "command-runner.terminal.autoFocus": true,
     "command-runner.commands": {
-        "run pytest testsuite": "cd ${workspaceFolder} && pytest --cov --cov-branch --cov-report term --cov-report xml:coverage/cov.xml --cov-report html:coverage/cov_html",
+        "run pytest testsuite": "cd ${workspaceFolder} && poetry poe test",
         "run HTTP server Coverage Report": "cd ${workspaceFolder} && python3 -m http.server 8888 --directory coverage/cov_html",
     },
     "commentTranslate.targetLanguage": "en",
@@ -40,6 +40,16 @@
     "python.formatting.blackPath": "black",
     "python.formatting.blackArgs": [
         "--line-length",
-        "88"
-    ]
+        "88",
+        "--exclude",
+        ".git",
+        "__pycache__",
+        "build",
+        "dist",
+        ".poetry",
+        "tests/test_app.py",
+        "--target-version",
+        "py312"
+    ],
+    "python-envs.pythonProjects": []
 }
