--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,9 @@
         "--target-version",
         "py312"
     ],
-    "python-envs.pythonProjects": []
+    "python-envs.pythonProjects": [],
+    "chat.promptFiles": true,
+    "chat.promptFilesLocations": {
+        ".github/prompts": true
+    }
 }
