Refactor pipreqs-action structure and update entry points
- Changed the entry point for the pipreqs-action from `main` to `cli`.
- Updated `pyproject.toml` to reflect new package structure and added `setuptools` configuration.
- Removed the old `app.py` entry point and created a new `__main__.py` for CLI execution.
- Implemented a new `cli` function in `main.py` to handle command-line arguments.
- Added a script to reset the Poetry virtual environment.
- Updated tests to remove references to the old `app.py` and adjusted for new CLI structure.
- Cleaned up action.yml tests for better readability and consistency.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,13 @@ dependencies = [
 ]
 
 [project.scripts]
-pipreqs-action = "github_action.main:main"
+pipreqs-action = "github_action.main:cli"
+
+[tool.setuptools]
+package-dir = { "" = "src" }
+
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [project.urls]
 Homepage = "https://github.com/jfheinrich-eu/pipreqs-action"
@@ -38,15 +44,13 @@ pre-commit = "4.3.0"
 [tool.poetry.group.testonly.dependencies]
 requests = "^2.32.4"
 pandas = "^2.3.2"
+pyyaml = "^6.0.2"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.poetry.plugins."poetry.application.plugin"]
-export = "poetry_export.plugin:ExportPlugin"
-poethepoet = "poethepoet.plugin:PoePlugin"
-git_version = "poetry_git_version_plugin:GitVersionPlugin"
+[project.entry-points."poetry.application.plugin"]
 
 [tool.pytest.ini_options]
 minversion = "8.0"
@@ -114,9 +118,6 @@ check = false
 exclude = '''
 /(\.git|__pycache__|build|dist|\.poetry|tests/test_app\.py)/
 '''
-
-[tool.poetry-git-version-plugin]
-release_type = "tag"
 
 [tool.poe.tasks]
 build = "poetry build"
