--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,7 @@
     "python.analysis.extraPaths": [
         "${workspaceFolder}/src"
     ],
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
     "python.formatting.provider": "black",
     "python.formatting.blackPath": "black",
     "python.formatting.blackArgs": [
@@ -55,5 +56,6 @@
     "chat.promptFiles": true,
     "chat.promptFilesLocations": {
         ".github/prompts": true
-    }
+    },
+    "python-envs.defaultEnvManager": "ms-python.python:system"
 }
