--- a/.github/workflows/lint_tests.yml
+++ b/.github/workflows/lint_tests.yml
@@ -34,15 +34,26 @@ jobs:
         with:
           python-version: "3.12"
 
+      - name: Set up Python dependencies caching
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install flake8 pytest pytest-cov
 
       - name: Lint
         run: python -m flake8 src
 
-      - name: Run tests
-        run: pytest
+      - name: Run tests with coverage
+        run: |
+          pytest --cov=src --cov-report=xml:coverage/cov.xml --cov-report=lcov:coverage/cov.info
 
       - name: Upload results to Codecov
         uses: codecov/codecov-action@v5
